--- a/cookies.css
+++ b/cookies.css
@@ -185,8 +185,8 @@ a {
 
 .point {
   position: absolute;
-  left: 22.5px;
-  top: 22.5px;
+  left: 23px;
+  top: 23px;
   border-radius: 15px;
   height: 10px;
   width: 10px;
@@ -378,12 +378,12 @@ p {
 	
 	th{
 	background: grey;
-	font-size: 22;
+	font-size: 22px;
 	}
 	
 	tr{
 	text-align: center;
-	font-size: 18;
+	font-size: 18px;
 	}
 	
 	#query{
